fixed width on mobile

--- a/FCC/tribute-page/styles.css
+++ b/FCC/tribute-page/styles.css
@@ -5,7 +5,7 @@ body {
 main {
   background-color: grey;
   border: none;
-  max-width: 70%;
+  max-width: 90%;
   margin: 50px auto;
   text-align: center;
   border-radius: 10px;
